force-app/main/default/objects/ILMN_Debug_Log__c/ILMN_Debug_Log__c.object-meta.xml
<CustomObject>
    <description>Storage table for ILMN_Log__e published events. To store data in this table, put a title in cs_Apex_Settings__c.ILMN_Logs_to_Persist__c</description>
    <label>ILMN Debug Log</label>
    <nameField>
        <displayFormat>Debug-{0000}</displayFormat>
        <label>Debug Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILMN Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>