force-app/main/default/objects/ILMN_Debug_Log__c/fields/DML__c.field-meta.xml
<CustomField>
    <fullName>DML__c</fullName>
    <description>DML statements used during the duration of the logging.</description>
    <label>DML</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>