force-app/main/default/objects/ILMN_Debug_Log__c/fields/Parent_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to store parent log Id</description>
    <label>Parent Log</label>
    <referenceTo>ILMN_Debug_Log__c</referenceTo>
    <relationshipLabel>ILMN Debug Logs</relationshipLabel>
    <relationshipName>ILMN_Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>