force-app/main/default/objects/ILMN_Debug_Log__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <description>SOQL queries used during the duration of the logging.</description>
    <label>SOQL</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>