force-app/main/default/objects/ILMN_Debug_Log__c/recordTypes/Emit.recordType-meta.xml
<RecordType>
    <fullName>Emit</fullName>
    <active>true</active>
    <label>Emit</label>
</RecordType>