force-app/main/default/objects/ILMN_Debug_Log__c/recordTypes/Pop_Child.recordType-meta.xml
<RecordType>
    <fullName>Pop_Child</fullName>
    <active>true</active>
    <label>Pop Child</label>
</RecordType>