force-app/main/default/objects/ILMN_Debug_Log__c/recordTypes/Pop_Parent.recordType-meta.xml
<RecordType>
    <fullName>Pop_Parent</fullName>
    <active>true</active>
    <label>Pop Parent</label>
</RecordType>