force-app/main/default/objects/ILMN_Debug_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>User__c</columns>
    <columns>Title__c</columns>
    <columns>Exception_Log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>7/29/2021 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>